# flap_control_system

./: README.md
ros2_ws/scripts/: build.sh  plot_fsm.py  run.sh
ros2_ws/src/flap_control/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/flap_control/config/: endpoints.yaml  pid_controller_config.yaml
ros2_ws/src/flap_control/config/utils/: Wand2Servo.yaml
ros2_ws/src/flap_control/include/flap_control/: BoatStateMachine.hpp  ConfigManager.hpp  GuiManager.hpp  PIDMath.hpp  PidGuiLimits.hpp  config_flap_controller_node.hpp  pid_controller_node.hpp  ros_endpoints.hpp
ros2_ws/src/flap_control/launch/: live_flap_control.launch.py  replay_flap_control.launch.py
ros2_ws/src/flap_control/launch/utils/: servo_pid.launch.py
ros2_ws/src/flap_control/src/: BoatStateMachine.cpp  ConfigManager.cpp  GuiManager.cpp  PIDMath.cpp  flap_controller_node.cpp  pid_controller_node.cpp
ros2_ws/src/flap_control/src/utils/: wand2servo.cpp
ros2_ws/src/state_estimation/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/state_estimation/config/: endpoints.yaml
ros2_ws/src/state_estimation/config/utils/: ekf_local.yaml  imu_merger.yaml
ros2_ws/src/state_estimation/include/state_estimation/: height_estimator_node.hpp  ros_endpoints.hpp
ros2_ws/src/state_estimation/launch/: live_state_estimation.launch.py  replay_state_estimation.launch.py
ros2_ws/src/state_estimation/launch/utils/: ekf_global.launch.py  ekf_local.launch.py  sensor_fusion.launch.py
ros2_ws/src/state_estimation/src/: gps_header_fixer_node.cpp  gps_input_adapter_node.cpp  gps_output_adapter_node.cpp  height_estimator_node.cpp
ros2_ws/src/state_estimation/src/utils/: us2est_node.cpp
ros2_ws/tools/: gen_endpoints.py  generate_milan_test.py  generate_pid_test_bag.py
